tests/negative/gold/protected_sdk_test.gold
tests/negative/protected_sdk_test.toit:4:3: error: Can't access protected member '__Protected_' of the SDK libraries
  __Protected_
  ^~~~~~~~~~~~
tests/negative/protected_sdk_test.toit:5:3: error: Can't access protected member '__protected_' of the SDK libraries
  __protected_
  ^~~~~~~~~~~~
tests/negative/protected_sdk_test.toit:6:3: error: Can't access protected member '__protected_global_' of the SDK libraries
  __protected_global_++
  ^~~~~~~~~~~~~~~~~~~
tests/negative/protected_sdk_test.toit:7:3: error: Can't access protected member '__protected_global_' of the SDK libraries
  __protected_global_
  ^~~~~~~~~~~~~~~~~~~
tests/negative/protected_sdk_test.toit:8:3: error: Can't access protected member '__protected_global_getter_setter_' of the SDK libraries
  __protected_global_getter_setter_
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tests/negative/protected_sdk_test.toit:9:3: error: Can't access protected member '__protected_global_getter_setter_' of the SDK libraries
  __protected_global_getter_setter_ = 499
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tests/negative/protected_sdk_test.toit:10:3: error: Can't access protected member '__protected_global_getter_setter_' of the SDK libraries
  __protected_global_getter_setter_ += 4
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tests/negative/protected_sdk_test.toit:11:13: error: Can't access protected member '__' of the SDK libraries
  Protected_.__
            ^
tests/negative/protected_sdk_test.toit:12:13: error: Can't access protected member '__named' of the SDK libraries
  Protected_.__named
            ^
Compilation failed.
